# flask-sec-fetch-csrf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
examples/: README.md  attacker.html  basic_app.py  factory_pattern.py
src/flask_sec_fetch_csrf/: __init__.py  exceptions.py  extension.py
tests/: conftest.py  test_csrf.py
